// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The header component for IDE-loader and Factory-loader pages should render start workspace correctly 1`] = `
<section
  className="pf-c-page__main-section pf-m-light"
>
  <div
    className="pf-l-flex"
  >
    <div
      className="pf-m-align-self-center"
    >
      <div
        className="pf-c-content"
      >
        <h1
          className=""
          data-pf-content={true}
        >
          Start workspace
        </h1>
      </div>
    </div>
    <div
      className=""
    >
      <span
        className="pf-c-label pf-m-blue"
        data-tip=""
      >
        <span
          className="pf-c-label__content"
        >
          <span
            className="pf-c-label__icon"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 64 1024 1024"
              width="1em"
            >
              <path
                d="M193.536 38.18l67.438 116.736c-5.705 5.047-11.337 10.24-16.75 15.579-34.231 33.938-61.221 73.801-80.896 119.662-6.729 15.653-12.215 31.598-16.677 47.909l-134.875-9.289c6.729-30.574 16.311-60.27 28.818-89.015 26.99-62.025 63.634-116.37 110.007-162.962 13.678-13.751 28.014-26.624 43.081-38.619zM175.689 608.548l-120.32 60.709c-5.266-10.24-10.167-20.699-14.848-31.378-22.382-51.419-35.474-105.765-39.278-163.109l135.387 9.362c4.242 34.231 13.093 66.999 26.697 98.304 3.877 8.923 7.973 17.627 12.434 26.112v0zM983.479 637.879c-26.99 62.025-63.707 116.151-110.007 162.523s-100.498 83.017-162.523 110.007-128.366 40.521-199.022 40.521v-138.313c50.834-0.293 98.67-10.094 143.579-29.55 45.568-19.675 85.431-46.665 119.662-80.896s61.221-74.094 80.896-119.662 29.55-94.135 29.55-145.847-9.874-100.425-29.55-146.359c-19.675-45.861-46.665-85.723-80.896-119.662s-74.094-60.709-119.662-80.457-94.135-29.55-145.847-29.55c-42.935 0-83.822 6.802-122.514 20.407l-67.511-116.955c60.123-24.795 124.197-37.23 192.293-37.23 70.656 0 136.997 13.385 199.022 40.009s116.151 63.342 162.523 110.007 83.017 101.010 110.007 162.962 40.521 128.366 40.521 199.022c0 70.656-13.531 136.997-40.521 199.022z"
                transform="rotate(180 0 512) scale(-1 1)"
              />
            </svg>
          </span>
          Starting
        </span>
      </span>
      <div>
        Dummy Tooltip
      </div>
    </div>
  </div>
</section>
`;

exports[`The header component for IDE-loader and Factory-loader pages should render workspace error correctly 1`] = `
<section
  className="pf-c-page__main-section pf-m-light"
>
  <div
    className="pf-l-flex"
  >
    <div
      className="pf-m-align-self-center"
    >
      <div
        className="pf-c-content"
      >
        <h1
          className=""
          data-pf-content={true}
        >
          Workspace error
        </h1>
      </div>
    </div>
    <div
      className=""
    >
      <span
        className="pf-c-label pf-m-red"
        data-tip=""
      >
        <span
          className="pf-c-label__content"
        >
          <span
            className="pf-c-label__icon"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                transform=""
              />
            </svg>
          </span>
          Error
        </span>
      </span>
      <div>
        Dummy Tooltip
      </div>
    </div>
  </div>
</section>
`;
